feat: added installation overview as a composite resource
